k8s/app2-api-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app2-api-gateway
  labels:
    managed-by: argocd
