k8s/app2-api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-api-gateway
  namespace: app2-api-gateway
  labels:
    app: app2-api-gateway
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: app2-api-gateway
