k8s/app2-api-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app2-api-gateway-route
  namespace: app2-api-gateway
  labels:
    app: app2-api-gateway
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: demo-gateway
    sectionName: https
  hostnames:
  - "api.rancher.live"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: app2-api-gateway
      namespace: app2-api-gateway
      port: 80
      weight: 100
